feat: esLint ignore files

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,13 @@
 {
-  "root": true,
-  "extends": ["@byndyusoft/eslint-config/header-apache-2.0", "@byndyusoft/eslint-config/backend"],
+  "ignorePatterns": ["src/**/files"],
+  "parser": "@typescript-eslint/parser",
   "plugins": ["unicorn"],
-  "ignorePatterns": ["src/"]
+  "root": true,
+  "rules": {
+    "@typescript-eslint/interface-name-prefix": "off",
+    "@typescript-eslint/explicit-function-return-type": "off",
+    "@typescript-eslint/no-explicit-any": "off",
+    "@typescript-eslint/explicit-module-boundary-types": "off",
+    "@typescript-eslint/no-use-before-define": "off"
+  }
 }
