--- a/jest.config.json
+++ b/jest.config.json
@@ -1,6 +1,3 @@
 {
-  "testPathIgnorePatterns": [
-    "/node_modules/",
-    "./*/*/files"
-  ]
+  "testPathIgnorePatterns": ["/node_modules/", "./*/*/files"]
 }
