feat: changed build folder on dist

--- a/package.json
+++ b/package.json
@@ -91,5 +91,5 @@
   "publishConfig": {
     "access": "public"
   },
-  "schematics": "./src/collection.json"
+  "schematics": "./dist/collection.json"
 }
