--- a/package.json
+++ b/package.json
@@ -23,10 +23,11 @@
     "_postinstall": "husky install",
     "prebuild": "shx rm -rf ./dist",
     "build": "yarn run prebuild && yarn run build:src",
-    "postbuild": "npm run copy:collection && npm run copy:lib",
+    "postbuild": "yarn run copy:collection && yarn run copy:libHidden",
     "build:src": "tsc --project ./tsconfig.build.json",
     "copy:collection": "cpx src/collection.json dist && cpx 'src/**/schema.json' dist",
-    "copy:lib": "cpx 'src/**/{files,workspace}/**/*.*' dist",
+    "copy:lib": "cpx 'src/**/files/**/{.*,*}' 'dist'",
+    "copy:libHidden": "copyfiles --all --up 1 'src/**/files/**/{.,}*' 'dist'",
     "lint": "yarn run lint:eslint && yarn run lint:markdown && yarn run lint:prettier",
     "lint:eslint": "eslint --ignore-path ./.gitignore --max-warnings 0 --ext .ts,.js .",
     "lint:eslint:fix": "eslint --ignore-path ./.gitignore --fix --ext .ts,.js .",
@@ -44,6 +45,7 @@
     "@angular-devkit/core": "15.2.6",
     "@angular-devkit/schematics": "15.2.6",
     "@schematics/angular": "15.2.4",
+    "copyfiles": "^2.4.1",
     "eslint-plugin-jest": "^27.2.1",
     "eslint-plugin-unicorn": "^47.0.0",
     "jsonc-parser": "3.2.0",
