--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@byndyusoft/nest-schematics",
-  "version": "1.0.0",
+  "version": "0.0.1-development",
   "description": "Nest schematics",
   "homepage": "https://github.com/Byndyusoft/nest-schematics#readme",
   "bugs": {
@@ -21,13 +21,13 @@
   ],
   "scripts": {
     "_postinstall": "husky install",
+    "_test:cov": "jest --coverage",
     "prebuild": "shx rm -rf ./dist",
-    "build": "yarn run prebuild && yarn run build:src",
-    "postbuild": "yarn run copy:collection && yarn run copy:libHidden",
+    "build": "yarn run prebuild && yarn run build:src && yarn run postbuild",
+    "postbuild": "yarn run copy:collection && yarn run copy:lib",
     "build:src": "tsc --project ./tsconfig.build.json",
-    "copy:collection": "cpx src/collection.json dist && cpx 'src/**/schema.json' dist",
-    "copy:lib": "cpx 'src/**/files/**/{.*,*}' 'dist'",
-    "copy:libHidden": "copyfiles --all --up 1 'src/**/files/**/{.,}*' 'dist'",
+    "copy:collection": "copyfiles --all --up 1 'src/collection.json' dist && copyfiles --all --up 1 'src/**/schema.json' dist",
+    "copy:lib": "copyfiles --all --up 1 'src/**/files/**/{.,}*' 'dist'",
     "lint": "yarn run lint:eslint && yarn run lint:markdown && yarn run lint:prettier",
     "lint:eslint": "eslint --ignore-path ./.gitignore --max-warnings 0 --ext .ts,.js .",
     "lint:eslint:fix": "eslint --ignore-path ./.gitignore --fix --ext .ts,.js .",
@@ -38,44 +38,32 @@
     "lint:prettier:fix": "prettier --ignore-path ./.gitignore --write \"./**/*.{ts,js,json,yaml,yml,md}\"",
     "prepublishOnly": "pinst --disable",
     "postpublish": "pinst --enable",
-    "test": "jest",
-    "test:cov": "jest --coverage"
+    "test": "jest"
   },
   "dependencies": {
-    "@angular-devkit/core": "15.2.6",
-    "@angular-devkit/schematics": "15.2.6",
-    "@schematics/angular": "15.2.4",
-    "eslint-plugin-jest": "^27.2.1",
+    "@angular-devkit/core": "^15.2.6",
+    "@angular-devkit/schematics": "^15.2.6",
+    "@schematics/angular": "^15.2.4",
     "eslint-plugin-unicorn": "^47.0.0",
-    "jsonc-parser": "3.2.0",
-    "pluralize": "8.0.0",
     "tslib": "^2.4.0"
   },
   "devDependencies": {
     "@byndyusoft/eslint-config": "2.2.1",
-    "@byndyusoft/nest-swagger": "^6.3.0-1",
+    "@byndyusoft/nest-swagger": "6.3.0-1",
     "@byndyusoft/tsconfig": "1.2.0",
     "@commitlint/cli": "17.6.3",
     "@commitlint/config-angular": "17.6.3",
     "@commitlint/config-conventional": "17.4.0",
-    "@nestjs/common": "^9.4.1",
+    "@nestjs/common": "9.4.1",
     "@types/jest": "29.5.1",
     "@types/node": "18.16.8",
-    "@typescript-eslint/eslint-plugin": "5.59.5",
-    "@typescript-eslint/parser": "5.59.5",
-    "copyfiles": "^2.4.1",
-    "cpx": "1.5.0",
+    "copyfiles": "2.4.1",
     "eslint": "8.40.0",
-    "eslint-config-prettier": "8.8.0",
-    "eslint-plugin-import": "2.27.5",
-    "gulp": "4.0.2",
-    "gulp-clean": "0.4.0",
     "husky": "8.0.2",
     "jest": "29.5.0",
     "jest-extended": "3.2.0",
     "lint-staged": "13.1.0",
     "markdownlint-cli": "0.32.2",
-    "nyc": "15.1.0",
     "pinst": "3.0.0",
     "prettier": "2.8.1",
     "prettier-plugin-packagejson": "2.3.0",
@@ -83,15 +71,18 @@
     "semantic-release": "19.0.5",
     "shx": "0.3.4",
     "ts-jest": "29.1.0",
-    "ts-node": "10.9.1",
     "typescript": "5.0.4"
   },
   "packageManager": "yarn@4.0.0-rc.44",
   "engines": {
-    "node": ">=14"
+    "node": ">=16"
   },
   "publishConfig": {
     "access": "public"
   },
-  "schematics": "./dist/collection.json"
+  "schematics": "./dist/collection.json",
+  "testPathIgnorePatterns": [
+    "/node_modules/",
+    "./*/*/files"
+  ]
 }
