--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,5 +5,5 @@
     "outDir": "./dist"
   },
   "include": ["src"],
-  "exclude": ["node_modules", "src/**/*.test.ts", "src/**/files/**"]
+  "exclude": ["src/**/*.test.ts", "src/**/files/**"]
 }
