--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,9 +1,5 @@
 {
   "root": true,
   "extends": ["@byndyusoft/eslint-config/header-apache-2.0", "@byndyusoft/eslint-config/backend"],
-  "ignorePatterns": ["src/**/files"],
-  "rules": {
-    "header/header": "off",
-    "unicorn/no-abusive-eslint-disable": "off"
-  }
+  "ignorePatterns": ["src/*/files"]
 }
