--- a/src/app/files/package.json
+++ b/src/app/files/package.json
@@ -3,16 +3,16 @@
   "version": "0.0.0-development",
   "private": true,
   "description": "root workspace",
-  "homepage": "https://github.com/Byndyusoft/ᐸRepository nameᐳ#readme",
+  "homepage": "<%= githubUrl %>/<%= githubOrganization %>/<%= repositoryName %>#readme",
   "bugs": {
-    "url": "https://github.com/Byndyusoft/ᐸRepository nameᐳ/issues"
+    "url": "<%= githubUrl %>/<%= githubOrganization %>/<%= repositoryName %>/issues"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/Byndyusoft/ᐸRepository nameᐳ.git"
+    "url": "<%= githubUrl %>/<%= githubOrganization %>/<%= repositoryName %>.git"
   },
-  "license": "Apache-2.0",
-  "author": "Byndyusoft",
+  "license": "<%= license %>",
+  "author": "<%= author %>",
   "workspaces": [
     "packages/*"
   ],
@@ -35,16 +35,14 @@
   },
   "devDependencies": {
     "@byndyusoft/eslint-config": "2.2.1",
-    "@commitlint/cli": "17.4.0",
-    "@commitlint/config-conventional": "17.4.0",
-    "eslint": "8.31.0",
-    "eslint-plugin-unicorn": "45.0.0",
+    "@commitlint/cli": "17.5.1",
+    "@commitlint/config-conventional": "17.4.4",
+    "eslint": "8.37.0",
     "husky": "8.0.3",
-    "lint-staged": "13.1.0",
+    "lint-staged": "13.2.0",
     "markdownlint-cli": "0.33.0",
-    "prettier": "2.8.2",
-    "prettier-plugin-packagejson": "2.3.0"
+    "prettier": "2.8.7",
+    "prettier-plugin-packagejson": "2.4.3"
   },
-  "packageManager": "yarn@4.0.0-rc.26",
-  "aleterName": "<%= name %>"
+  "packageManager": "yarn@4.0.0-rc.42"
 }
