--- a/src/app/files/packages/app/package.json
+++ b/src/app/files/packages/app/package.json
@@ -1,18 +1,18 @@
 {
-  "name": "ᐸAppᐳ",
+  "name": "<%= appName %>",
   "version": "0.0.0-development",
   "private": true,
-  "description": "ᐸApp descriptionᐳ",
-  "homepage": "https://github.com/Byndyusoft/ᐸRepository nameᐳ#readme",
+  "description": "<%= appDescription %>",
+  "homepage": "<%= githubUrl %>/<%= githubOrganization %>/<%= repositoryName %>#readme",
   "bugs": {
-    "url": "https://github.com/Byndyusoft/ᐸRepository nameᐳ/issues"
+    "url": "<%= githubUrl %>/<%= githubOrganization %>/<%= repositoryName %>/issues"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/Byndyusoft/ᐸRepository nameᐳ.git"
+    "url": "<%= githubUrl %>/<%= githubOrganization %>/<%= repositoryName %>.git"
   },
-  "license": "Apache-2.0",
-  "author": "Byndyusoft",
+  "license": "<%= license %>",
+  "author": "<%= author %>",
   "scripts": {
     "prebuild": "shx rm -rf ./dist",
     "build": "yarn run prebuild && yarn run build:src",
@@ -73,56 +73,52 @@
     }
   },
   "dependencies": {
+    "<%= dtosName %>": "workspace:*",
     "@byndyusoft/class-validator-extended": "1.0.1",
     "@byndyusoft/nest-opentracing": "2.3.2",
     "@byndyusoft/nest-pino": "3.1.2-1",
-    "@byndyusoft/nest-swagger": "6.1.2-1",
+    "@byndyusoft/nest-swagger": "6.3.0-1",
     "@byndyusoft/pino-logger-factory": "3.0.1",
     "@digikare/nestjs-prom": "1.0.0",
     "@nestjs/axios": "0.1.0",
-    "@nestjs/common": "9.2.1",
-    "@nestjs/core": "9.2.1",
-    "@nestjs/platform-express": "9.2.1",
-    "@nestjs/terminus": "9.1.4",
+    "@nestjs/common": "9.3.12",
+    "@nestjs/core": "9.3.12",
+    "@nestjs/platform-express": "9.3.12",
+    "@nestjs/terminus": "9.2.2",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.0",
     "helmet": "6.0.1",
     "jaeger-client": "3.19.0",
     "lodash": "4.17.21",
-    "pg": "8.8.0",
-    "pino": "8.8.0",
-    "pino-http": "8.3.1",
+    "pino": "8.11.0",
+    "pino-http": "8.3.3",
     "reflect-metadata": "0.1.13",
     "rxjs": "7.8.0",
     "source-map-support": "0.5.21",
-    "tslib": "2.4.1",
-    "ᐸDtosᐳ": "workspace:*"
+    "tslib": "2.5.0"
   },
   "devDependencies": {
+    "<%= dtosTestingName %>": "workspace:*",
     "@byndyusoft/sonar-coverage-reporter": "1.0.0",
     "@byndyusoft/tsconfig": "1.2.0",
     "@casualbot/jest-sonar-reporter": "2.2.7",
-    "@nestjs/cli": "9.1.8",
-    "@nestjs/schematics": "9.0.4",
-    "@types/express": "4.17.15",
+    "@nestjs/cli": "9.3.0",
+    "@nestjs/schematics": "9.1.0",
+    "@types/express": "4.17.17",
     "@types/jaeger-client": "3.18.4",
-    "@types/jest": "29.2.5",
-    "@types/lodash": "4.14.191",
-    "@types/node": "16.18.11",
-    "@types/pg": "8.6.6",
+    "@types/jest": "29.5.0",
+    "@types/lodash": "4.14.192",
+    "@types/node": "16.18.23",
     "@types/source-map-support": "0.5.6",
     "dotenv": "16.0.3",
     "express": "4.18.2",
-    "generator-bs": "https://github.com/argus-xd/yeoman-generators.git",
-    "jest": "29.3.1",
-    "jest-extended": "3.2.2",
-    "jest-mock-extended": "3.0.1",
-    "pino-pretty": "9.1.1",
-    "schema-user": "https://github.com/argus-xd/nestjs-schema-user.git",
+    "jest": "29.5.0",
+    "jest-extended": "3.2.4",
+    "jest-mock-extended": "3.0.4",
+    "pino-pretty": "10.0.0",
     "shx": "0.3.4",
-    "ts-jest": "29.0.3",
-    "typescript": "4.9.4",
-    "ᐸDtos testingᐳ": "workspace:*"
+    "ts-jest": "29.1.0",
+    "typescript": "5.0.3"
   },
   "engines": {
     "node": ">=16"
