--- a/src/app/files/packages/client/package.json
+++ b/src/app/files/packages/client/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "ᐸClientᐳ",
+  "name": "<%= clientName %>",
   "version": "0.0.0-development",
-  "description": "ᐸClient descriptionᐳ",
-  "homepage": "https://github.com/Byndyusoft/ᐸRepository nameᐳ#readme",
+  "description": "<%= clientDescription %>",
+  "homepage": "<%= githubUrl %>/<%= githubOrganization %>/<%= repositoryName %>#readme",
   "bugs": {
-    "url": "https://github.com/Byndyusoft/ᐸRepository nameᐳ/issues"
+    "url": "<%= githubUrl %>/<%= githubOrganization %>/<%= repositoryName %>/issues"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/Byndyusoft/ᐸRepository nameᐳ.git"
+    "url": "<%= githubUrl %>/<%= githubOrganization %>/<%= repositoryName %>.git"
   },
-  "license": "Apache-2.0",
-  "author": "Byndyusoft",
+  "license": "<%= license %>",
+  "author": "<%= author %>",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "files": [
@@ -26,17 +26,18 @@
   },
   "dependencies": {
     "proper-url-join": "^2.1.1",
-    "qs": "^6.11.0",
-    "tslib": "^2.4.1"
+    "qs": "^6.11.1",
+    "tslib": "^2.5.0"
   },
   "devDependencies": {
+    "<%= dtosName %>": "workspace:*",
     "@byndyusoft/class-validator-extended": "1.0.1",
     "@byndyusoft/nest-dynamic-module": "1.0.0",
     "@byndyusoft/nest-http-client": "1.2.1",
-    "@byndyusoft/nest-swagger": "6.1.2-1",
+    "@byndyusoft/nest-swagger": "6.3.0-1",
     "@byndyusoft/tsconfig": "1.2.0",
-    "@nestjs/common": "9.2.1",
-    "@nestjs/core": "9.2.1",
+    "@nestjs/common": "9.3.12",
+    "@nestjs/core": "9.3.12",
     "@types/proper-url-join": "2.1.1",
     "@types/qs": "6.9.7",
     "axios": "0.27.2",
@@ -45,14 +46,13 @@
     "reflect-metadata": "0.1.13",
     "rxjs": "7.8.0",
     "shx": "0.3.4",
-    "typescript": "4.9.4",
-    "ᐸDtosᐳ": "workspace:*"
+    "typescript": "5.0.3"
   },
   "peerDependencies": {
+    "<%= dtosName %>": "workspace:*",
     "@byndyusoft/nest-http-client": "^1.2.1",
     "@nestjs/common": "^9.2.1",
-    "rxjs": "^7.8.0",
-    "ᐸDtosᐳ": "workspace:*"
+    "rxjs": "^7.8.0"
   },
   "engines": {
     "node": ">=16"
