--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,6 @@
     // Emit
     "outDir": "./dist"
   },
-  "include": ["src"],
-  "exclude": ["src/**/*.test.ts", "src/**/files/**"]
+  "include": ["src", "test"],
+  "exclude": ["src/*/files/**"]
 }
