--- a/package.json
+++ b/package.json
@@ -81,7 +81,7 @@
     "@commitlint/cli": "17.6.3",
     "@commitlint/config-angular": "17.6.3",
     "@commitlint/config-conventional": "17.4.0",
-    "@nestjs/common": "9.4.1",
+    "@types/node": "18.18.1",
     "@types/jest": "29.5.1",
     "@types/node": "18.16.8",
     "copyfiles": "2.4.1",
@@ -102,7 +102,7 @@
   },
   "packageManager": "yarn@4.0.0-rc.44",
   "engines": {
-    "node": ">=16"
+    "node": ">=18"
   },
   "publishConfig": {
     "access": "public"
